crates/derive/tests/ui/non_string_grammar_attr.rs
use nanachi_derive::Parser;

#[derive(Parser)]
#[grammar(123)]
struct NonStringGrammarAttr;

fn main() {}
